--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
+    "emailjs": "^4.0.1",
+    "emailjs-com": "^3.2.0",
     "leaflet": "^1.8.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -13,6 +15,7 @@
     "react-leaflet": "^4.0.1",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
+    "react-typewriter-effect": "^1.1.0",
     "swiper": "^8.3.0",
     "web-vitals": "^2.1.4"
   },
